--- a/index.html
+++ b/index.html
@@ -276,6 +276,22 @@
 										<!-- FEUP -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
+												<img class="logo-exp" src="assets/img/experience/ctw.png" alt=""/>
+												<div class="d-flex flex-column ml-2">
+													<h5 class="title title--h5 timeline__title">Software Engineer</h5>
+													<h6 class="title title--h6 timeline__title2">Critical TechWorks</h5>
+														<div><span class="timeline__period"><i class="far fa-clock"></i>
+																Sep
+																2021 —
+																Present</span></div>
+												</div>
+											</div>
+											<p class="timeline__description"><b>Languages:</b> C++<br>
+											</p>
+										</article>
+										<!-- FEUP -->
+										<article class="timeline__item" data-aos="fade-up">
+											<div class="d-flex flex-row">
 												<img class="logo-exp" src="assets/img/experience/feupLogo.png" alt="" />
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title">Teaching
@@ -287,7 +303,7 @@
 														<div><span class="timeline__period"><i class="far fa-clock"></i>
 																Fev
 																2021 —
-																Present</span></div>
+																Jul 2021</span></div>
 												</div>
 											</div>
 											<p class="timeline__description"><b>Languages:</b> C<br>Assist students
@@ -311,7 +327,7 @@
 														</h5>
 														<div><span class="timeline__period"><i class="far fa-clock"></i>
 																Fev 2021 —
-																Present</span></div>
+																Jul 2021</span></div>
 												</div>
 											</div>
 											<p class="timeline__description"><b>Languages:</b> C++ and Python<br>The
@@ -363,8 +379,10 @@
 												<img class="logo-exp" src="assets/img/experience/criticalLogo2.png"
 													alt="" />
 												<div class="d-flex flex-column ml-2">
-													<h5 class="title title--h5 timeline__title"> Web Designer
+													<h5 class="title title--h5 timeline__title"> Embedded Systems Developer
 													</h5>
+													<h6 class="title title--h6 timeline__title2">Internship
+														</h5>
 													<div><span class="timeline__period"><i class="far fa-clock"></i>
 															Jul 2019 —
 															Jul 2019</span></div>
