--- a/projects/line_follower.html
+++ b/projects/line_follower.html
@@ -176,7 +176,7 @@
 						<!-- Post -->
 						<div class="pb-3">
 							<header class="header-post">
-								<h1 class="title title--h1 mb-0">Line Follower</h1>
+								<h1 class="title title--h1 mb-0">Line Follower Robot</h1>
 								<div class="header-post__date">2018</div>
 
 
