--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 												<div class="d-flex flex-column ml-2">
 													<h5 class="title title--h5 timeline__title"> MSc Thesis -
 														Deep Learning and Computer Vision </h5>
-													<h6 class="title title--h6 timeline__title2">Internship - Abyssal
+													<h6 class="title title--h6 timeline__title2">Abyssal
 														</h5>
 														<div><span class="timeline__period"><i class="far fa-clock"></i>
 																Fev 2021 —
