--- a/index.html
+++ b/index.html
@@ -156,15 +156,14 @@
 						<!-- About -->
 						<div class="pb-0 pb-sm-2">
 							<h1 class="title title--h1 first-title title__separate">About Me</h1>
-							<p>I'm from Porto, Portugal, studying the Master's degree in Electrical and Computer
-								Engineering in 5th year, major area of Robotics.
-								I'm programming enthusiast, a self-taught and agile person, always trying to learn new
-								things.
-								During these years I took some online courses about new programming languages and
-								machine learning, I also focused on personal projects.
+							<b>Currently working in automotive as a Software Engineer | BMW Group</b>
+							<p>Graduated at @Faculty of Engineering of University of Porto with knowledge in several programming languages and software methodologies.</p>
+							<p>I'm a self-taught, creative and agile person, always trying to learn new things and ready for new challenges.
+								Passionate about technology and programming, I strive to create new things that have a positive impact on the
+								world.
 							</p>
 
-							<p> My main interest areas are software engineering, web developer and computer vision.
+							<p> Currently into: React / Angular, Express.Js
 
 							</p>
 
@@ -273,7 +272,7 @@
 									<h2 class="title title--h3"><img class="title-icon" src="assets/img/suitcase.svg"
 											alt="" /> Experience</h2>
 									<div class="timeline">
-										<!-- FEUP -->
+										<!-- CTW -->
 										<article class="timeline__item" data-aos="fade-up">
 											<div class="d-flex flex-row">
 												<img class="logo-exp" src="assets/img/experience/ctw.png" alt=""/>
@@ -286,7 +285,15 @@
 																Present</span></div>
 												</div>
 											</div>
-											<p class="timeline__description"><b>Languages:</b> C++<br>
+											<p class="timeline__description">BMW's infotainment system (Android Auto):
+											</p>
+											<p class="timeline__description">- Responsible for developing 2 full features, defining the architecture, and synchronizing
+												between teams from Spain and Germany. Development using C++ in Linux environment;
+												<br>- Responsible for following and teaching our intern about React and Express.Js for his
+												internship project;
+												<br>- A side project in the company, in which I was developing a web APP to manage our internal
+												hardware.
+
 											</p>
 										</article>
 										<!-- FEUP -->
@@ -499,9 +506,19 @@
 											<div class="progress-text"><span>HTML and CSS</span></div>
 										</div>
 
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="75"
+												 aria-valuemin="0" aria-valuemax="100">
+												<div class="progress-text"><span>React</span><span
+														class="no_bold">Advanced</span>
+												</div>
+											</div>
+											<div class="progress-text"><span>HTML and CSS</span></div>
+										</div>
+
 										<!-- Progress -->
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="85"
+											<div class="progress-bar" role="progressbar" aria-valuenow="75"
 												aria-valuemin="0" aria-valuemax="100">
 												<div class="progress-text"><span>PHP</span><span
 														class="no_bold">Advanced</span>
